<resources>
    <string name="app_name">HandThis Homathon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Yes we did it</string>
    <string name="welcome_to_handthis"><![CDATA[Welcome<br />To<br /> <font color=#FBAF02>Hand</font>]]>This</string>
    <string name="start">start</string>
    <string name="intro_headline_1">Order\nfaster &amp; easier</string>
    <string name="intro_headline_2">Enjoy!</string>
    <string name="intro_text_1">We deliver to your home or office. Choose from plenty of businesses nearby.</string>
    <string name="intro_text_2">We are pleased to welcome you as a new customer and look forward to providing you with good service.</string>
    <string name="next">next</string>
    <string name="sign_in">Sign In</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_terms">By clicking sign up you agree to the terms and conditions</string>
    <string name="business">Business</string>
    <string name="customer">Customer</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="forgot_password_msg">Please enter your phone. You will receive a link to create a new Password.</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="myOrders">My Orders</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="kfc">KFC</string>
    <string name="jeddah_saudi_arabia">Jeddah, Saudi Arabia</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="user_name">User Name</string>
    <string name="Email">Email</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="area">Area</string>
    <string name="street_building_floor_apartment_no">Street, Building, Floor, Apartment No</string>
    <string name="albaik">ALBAIK</string>
    <string name="do_not_add_chargeable_items_as_this_may_cause_your_order_to_be_cancelled">Do not add chargeable items, as this may cause your order to be cancelled</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="cancel">cancel</string>
    <string name="pay">Pay</string>
    <string name="enable_location">Enable location</string>
    <string name="turn_on_device_location">turn_on_device_location</string>
    <string name="phone_verification">Phone verification</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="please_write_your_phone">Please write your phone</string>
    <string name="confirm">Confirm</string>
    <string name="google_maps_key" />
    <string name="food_name">Food name</string>
    <string name="quantity">Quantity</string>
    <string name="item_price">Item price</string>
    <string name="total_28_00">total 28.00</string>
    <string name="_20_00_le">20.00 LE</string>
    <string name="save_address">Save address</string>
</resources>
