<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.destinations.SignUpFragment">

    <ImageView
        android:id="@+id/iv_yellow_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/brush_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/msyhbd"
        android:gravity="center_vertical"
        android:text="@string/sign_up"
        android:textColor="@color/colorNavyBlue"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@id/iv_yellow_background"
        app:layout_constraintTop_toTopOf="@id/iv_yellow_background" />

    <ToggleButton
        android:id="@+id/user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_corners"
        android:padding="10dp"
        android:textColor="@color/colorNavyBlue"
        android:textOff="@string/customer"
        android:textOn="@string/business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_yellow_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/phone"
        app:hintTextColor="@color/colorDarkGrey"
        app:layout_constraintTop_toBottomOf="@id/user_type">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorNavyBlue"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorDarkGrey"
        app:layout_constraintTop_toBottomOf="@id/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorNavyBlue"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorDarkGrey"
        app:layout_constraintTop_toBottomOf="@id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorNavyBlue"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms"
        android:textColor="@color/colorDarkGrey"
        app:layout_constraintEnd_toEndOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="@id/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/confirm_password" />

    <TextView
        android:id="@+id/tv_sign_up_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/start_rounded_corners"
        android:drawableEnd="@drawable/next"
        android:drawablePadding="40dp"
        android:gravity="center"
        android:paddingStart="60dp"
        android:paddingTop="5dp"
        android:paddingEnd="40dp"
        android:paddingBottom="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorNavyBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ll_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <LinearLayout
        android:id="@+id/ll_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/go_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorNavyBlue"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>